src/test/deca/syntax/invalid/homemade/test/test_pars_inv_affectation_float_trop_petit2.deca
{
    println(0.7e-45);
}